--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <title>My first Bitstarter</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style/reset.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="style/global.css">
+    <link rel="stylesheet" type="text/css" href="global.css">
     
 </head>
 
