--- a/index.html
+++ b/index.html
@@ -5,9 +5,46 @@
 
     <title>My first Bitstarter</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="reset.css">
     <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="global.css">
+    <style type="text/css" rel="stylesheet">
+        body {
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+
+.container {
+    width: 960px;
+}
+
+p.lead {
+    padding-top: 15px;
+}
+
+.navigation, .pitch, .section1, .section2, .faq, .footer {
+    padding: 10px 0px 10px 0px;
+}
+
+.video, .thermometer, .order, .social {
+    border: 1px dotted;
+    text-align: center;
+}
+
+.video {
+    /* Internal borders have 1px width, thus need to add 4 * 1px to 120 px. */
+    height: 124px;
+    line-height: 124px;
+}
+
+.thermometer .order .social {
+    /* Line-height to vertically center */    
+    height: 40px;
+    line-height: 40px;
+}
+
+div.row {
+    border: 1px solid;
+}        
+    </style>
     
 </head>
 
